correction z-index

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -191,7 +191,7 @@ a:focus {
 .main-header {
   position: relative;
   max-height: 100px;
-  z-index: 1030; }
+  z-index: 3030; }
 
 .main-header .navbar {
   -webkit-transition: margin-left 0.3s ease-in-out;
@@ -553,7 +553,7 @@ a:focus {
     -o-transform: translate(0, 0);
     transform: translate(0, 0);
     width: 50px !important;
-    z-index: 850; }
+    z-index: 2001; }
 
   .sidebar-mini.sidebar-collapse .sidebar-menu > li {
     position: relative; }
